--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,6 +4,11 @@
       "Default": "Debug",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "StaticFiles": {
+      "Headers": {
+        "Cache-Control":  "no cache"
+      }
     }
   }
 }
