135/747 - adicionando novos arquivos para o front em angular.

--- a/HealthCheck.csproj
+++ b/HealthCheck.csproj
@@ -46,6 +46,7 @@
     <None Remove="ClientApp\src\app\counter\counter.component.ts" />
     <None Remove="ClientApp\src\app\fetch-data\fetch-data.component.html" />
     <None Remove="ClientApp\src\app\fetch-data\fetch-data.component.ts" />
+    <None Remove="ClientApp\src\app\health-check\health-check.component.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -53,6 +54,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\src\app\NewFolder1\" />
     <Folder Include="Controllers\" />
   </ItemGroup>
 
